--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -1,299 +1,98 @@
+@define-color base00 #181818;
+@define-color base01 #2b2e37;
+@define-color base02 #3b3e47;
+@define-color base03 #585858;
+@define-color base04 #b8b8b8;
+@define-color base05 #d8d8d8;
+@define-color base06 #e8e8e8;
+@define-color base07 #f8f8f8;
+@define-color base08 #ab4642;
+@define-color base09 #dc9656;
+@define-color base0A #f7ca88;
+@define-color base0B #a1b56c;
+@define-color base0C #86c1b9;
+@define-color base0D #7cafc2;
+@define-color base0E #ba8baf;
+@define-color base0F #a16946;
+
 * {
-    /* `otf-font-awesome` is required to be installed for icons */
-    font-family: JetBrainsMono Nerd Font;
-    font-size: 17px;
-  }
-  
-  window#waybar {
-    background-color: rgba(10, 10, 10, 10);
-    color: #ffffff;
-    transition-property: background-color;
-    transition-duration: 0.5s;
-    border-top: 8px transparent;
-    border-radius: 0px;
-    transition-duration: 0.5s;
-    margin: 16px 16px;
-  }
-  
-  #custom-launcher {
-      margin-left: 5px;
-      padding-left: 7px;
-      padding-right: 6px;
-  }
-  
-  #custom-power-menu {
-      margin-right: 5px;
-      padding-left: 7px;
-      padding-right: 6px;
-  }
-  window#waybar.hidden {
-    opacity: 0.2;
-  }
-  
-  #workspaces button {
-    padding: 0 5px;
-    color: #7984A4;
-    background-color: transparent;
-    box-shadow: inset 0 -3px transparent;
-    border: none;
-    border-radius: 0;
-  }
-  
-  #workspaces button.focused {
-    color: #bf616a;
-  }
-  
-  #workspaces button.active {
-    color: #6a92d7;
-  }
-  
-  #workspaces button.urgent {
-    background-color: #eb4d4b;
-  }
-  
-  #window {
-    color: #64727d;
-  }
-  
-  #clock,
-  #battery,
-  #cpu,
-  #memory,
-  #disk,
-  #temperature,
-  #backlight,
-  #network,
-  #pulseaudio,
-  #custom-media,
-  #tray,
-  #mode,
-  #idle_inhibitor,
-  #mpd,
-  #bluetooth,
-  #custom-hyprPicker,
-  #custom-power-menu,
-  #custom-spotify,
-  #custom-weather {
-    padding: 0 10px;
-    color: #e5e5e5;
-    border-radius: 9.5px;
-    background-color: #1f2530;
-  }
-  
-  #window,
-  #workspaces {
-    margin: 0 4px;
-    border-radius: 7.8px;
-    background-color: #1f2530;
-  }
-  
-  #cpu {
-    color: #fb958b;
-    background-color: #1f2530;
-  }
-  
-  #memory {
-    color: #ebcb8b;
-    background-color: #1f2530;
-  }
-  
-  #custom-power-menu {
-    border-radius: 9.5px;
-    background-color: #1b242b;
-    border-radius: 7.5px;
-    padding: 0 5px;
-  }
-  
-  #custom-launcher {
-    background-color: #1b242b;
-    color: #6a92d7;
-    border-radius: 7.5px;
-    padding: 0 3px;
-  }
-  
-  #custom-weather.severe {
-    color: #eb937d;
-  }
-  
-  #custom-weather.sunnyDay {
-    color: #c2ca76;
-  }
-  
-  #custom-weather.clearNight {
-    color: #cad3f5;
-  }
-  
-  #custom-weather.cloudyFoggyDay,
-  #custom-weather.cloudyFoggyNight {
-    color: #c2ddda;
-  }
-  
-  #custom-weather.rainyDay,
-  #custom-weather.rainyNight {
-    color: #5aaca5;
-  }
-  
-  #custom-weather.showyIcyDay,
-  #custom-weather.snowyIcyNight {
-    color: #d6e7e5;
-  }
-  
-  #custom-weather.default {
-    color: #dbd9d8;
-  }
-  
-  .modules-left > widget:first-child > #workspaces {
-    margin-left: 0;
-  }
-  
-  .modules-right > widget:last-child > #workspaces {
-    margin-right: 0;
-  }
-  
-  #pulseaudio {
-    color: #7d9bba;
-  }
-  
-  #backlight {
-     color: #8fbcbb;
-  }
-  
-  #clock {
-    color: #c8d2e0;
-  }
-  
-  #battery {
-    color: #c0caf5;
-  }
-  
-  #battery.charging,
-  #battery.full,
-  #battery.plugged {
-    color: #26a65b;
-  }
-  
-  @keyframes blink {
-    to {
-      background-color: rgba(30, 34, 42, 0.5);
-      color: #abb2bf;
-    }
-  }
-  
-  #battery.critical:not(.charging) {
-    color: #f53c3c;
-    animation-name: blink;
-    animation-duration: 0.5s;
-    animation-timing-function: linear;
-    animation-iteration-count: infinite;
-    animation-direction: alternate;
-  }
-  
-  label:focus {
-    background-color: #000000;
-  }
-  
-  #disk {
-    background-color: #964b00;
-  }
-  
-  #bluetooth {
-    color: #707d9d;
-  }
-  
-  #bluetooth.disconnected {
-    color: #f53c3c;
-  }
-  
-  #network {
-    color: #b48ead;
-  }
-  
-  #network.disconnected {
-    color: #f53c3c;
-  }
-  
-  #custom-media {
-    background-color: #66cc99;
-    color: #2a5c45;
-    min-width: 100px;
-  }
-  
-  #custom-media.custom-spotify {
-    background-color: #66cc99;
-  }
-  
-  #custom-media.custom-vlc {
-    background-color: #ffa000;
-  }
-  
-  #temperature {
-    background-color: #f0932b;
-  }
-  
-  #temperature.critical {
-    background-color: #eb4d4b;
-  }
-  
-  #tray > .passive {
-    -gtk-icon-effect: dim;
-  }
-  
-  #tray > .needs-attention {
-    -gtk-icon-effect: highlight;
-    background-color: #eb4d4b;
-  }
-  
-  #idle_inhibitor {
-    background-color: #2d3436;
-  }
-  
-  #idle_inhibitor.activated {
-    background-color: #ecf0f1;
-    color: #2d3436;
-  }
-  
-  #mpd {
-    color: #2a5c45;
-  }
-  
-  #mpd.disconnected {
-    color: #f53c3c;
-  }
-  
-  #mpd.stopped {
-    color: #90b1b1;
-  }
-  
-  #mpd.paused {
-    color: #51a37a;
-  }
-  
-  #language {
-    background: #00b093;
-    color: #740864;
-    padding: 0 5px;
-    margin: 0 5px;
-    min-width: 16px;
-  }
-  
-  #keyboard-state {
-    background: #97e1ad;
-    color: #000000;
-    padding: 0 0px;
-    margin: 0 5px;
-    min-width: 16px;
-  }
-  
-  #keyboard-state > label {
-    padding: 0 5px;
-  }
-  
-  #custom-spotify {
-    padding: 0 10px;
-    margin: 0 4px;
-    color: #abb2bf;
-  }
-  
-  #keyboard-state > label.locked {
-    background: rgba(0, 0, 0, 0.2);
-  }
+  transition: none;
+  box-shadow: none;
+}
+
+#waybar {
+	font-family: 'Source Code Pro', sans-serif;
+	font-size: 1.2em;
+	font-weight: 400;
+  color: @base04;
+  background: @base01;
+}
+
+#workspaces {
+  margin: 0 4px;
+}
+
+#workspaces button {
+  margin: 4px 0;
+  padding: 0 4px;
+  color: @base05;
+}
+
+#workspaces button.visible {
+}
+
+#workspaces button.active {
+  border-radius: 4px;
+  background-color: @base02;
+}
+
+#workspaces button.urgent {
+  color: rgba(238, 46, 36, 1);
+}
+
+#tray {
+  margin: 4px 4px 4px 4px;
+  border-radius: 4px;
+  background-color: @base02;
+}
+
+#tray * {
+  padding: 0 6px;
+  border-left: 1px solid @base00;
+}
+
+#tray *:first-child {
+  border-left: none;
+}
+
+#mode, #battery, #cpu, #memory, #network, #pulseaudio, #idle_inhibitor, #backlight, #custom-storage, #custom-updates, #custom-weather, #custom-mail, #clock, #temperature {
+  margin: 4px 2px;
+  padding: 0 6px;
+  background-color: @base02;
+  border-radius: 4px;
+  min-width: 20px;
+}
+
+#pulseaudio.muted {
+  color: @base0F;
+}
+
+#pulseaudio.bluetooth {
+  color: @base0C;
+}
+
+#clock {
+  margin-left: 0px;
+  margin-right: 4px;
+  background-color: transparent;
+}
+
+#temperature.critical {
+  color: @base0F;
+}
+
+#window {
+  font-size: 0.9em;
+	font-weight: 400;
+	font-family: sans-serif;
+}
