use another waybar

--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -1,98 +1,246 @@
-@define-color base00 #181818;
-@define-color base01 #2b2e37;
-@define-color base02 #3b3e47;
-@define-color base03 #585858;
-@define-color base04 #b8b8b8;
-@define-color base05 #d8d8d8;
-@define-color base06 #e8e8e8;
-@define-color base07 #f8f8f8;
-@define-color base08 #ab4642;
-@define-color base09 #dc9656;
-@define-color base0A #f7ca88;
-@define-color base0B #a1b56c;
-@define-color base0C #86c1b9;
-@define-color base0D #7cafc2;
-@define-color base0E #ba8baf;
-@define-color base0F #a16946;
-
 * {
-  transition: none;
-  box-shadow: none;
+  border: none;
+  border-radius: 0px;
+  /*font-family: VictorMono, Iosevka Nerd Font, Noto Sans CJK;*/
+  font-family: Iosevka, FontAwesome, Noto Sans CJK;
+  font-size: 14px;
+  font-style: normal;
+  min-height: 0;
 }
 
-#waybar {
-	font-family: 'Source Code Pro', sans-serif;
-	font-size: 1.2em;
-	font-weight: 400;
-  color: @base04;
-  background: @base01;
+window#waybar {
+  background: rgba(30, 30, 46, 0.5);
+  border-bottom: 1px solid #282828;
+  color: #f4d9e1
 }
 
 #workspaces {
-  margin: 0 4px;
+background: #282828;
+margin: 5px 5px 5px 5px;
+padding: 0px 5px 0px 5px;
+border-radius: 16px;
+border: solid 0px #f4d9e1;
+font-weight: normal;
+font-style: normal;
 }
-
 #workspaces button {
-  margin: 4px 0;
-  padding: 0 4px;
-  color: @base05;
-}
-
-#workspaces button.visible {
+  padding: 0px 5px;
+  border-radius: 16px;
+  color: #928374;
 }
 
 #workspaces button.active {
-  border-radius: 4px;
-  background-color: @base02;
+  color: #f4d9e1;
+  background-color: transparent;
+  border-radius: 16px;
 }
 
-#workspaces button.urgent {
-  color: rgba(238, 46, 36, 1);
+#workspaces button:hover {
+background-color: #E6B9C6;
+color: black;
+border-radius: 16px;
+}
+
+#custom-date, #clock, #battery, #pulseaudio, #network, #custom-randwall, #custom-launcher {
+background: transparent;
+padding: 5px 5px 5px 5px;
+margin: 5px 5px 5px 5px;
+border-radius: 8px;
+border: solid 0px #f4d9e1;
+}
+
+#custom-date {
+color: #D3869B;
+}
+
+#custom-power {
+color: #24283b;
+background-color: #db4b4b;
+border-radius: 5px;
+margin-right: 10px;
+margin-top: 5px;
+margin-bottom: 5px;
+margin-left: 0px;
+padding: 5px 10px;
 }
 
 #tray {
-  margin: 4px 4px 4px 4px;
-  border-radius: 4px;
-  background-color: @base02;
-}
-
-#tray * {
-  padding: 0 6px;
-  border-left: 1px solid @base00;
-}
-
-#tray *:first-child {
-  border-left: none;
-}
-
-#mode, #battery, #cpu, #memory, #network, #pulseaudio, #idle_inhibitor, #backlight, #custom-storage, #custom-updates, #custom-weather, #custom-mail, #clock, #temperature {
-  margin: 4px 2px;
-  padding: 0 6px;
-  background-color: @base02;
-  border-radius: 4px;
-  min-width: 20px;
-}
-
-#pulseaudio.muted {
-  color: @base0F;
-}
-
-#pulseaudio.bluetooth {
-  color: @base0C;
+  background: #282828;
+  margin: 5px 5px 5px 5px;
+  border-radius: 16px;
+  padding: 0px 5px;
+  /*border-right: solid 1px #282738;*/
 }
 
 #clock {
-  margin-left: 0px;
-  margin-right: 4px;
-  background-color: transparent;
+  color: #E6B9C6;
+  background-color: #282828;
+  border-radius: 0px 0px 0px 24px;
+  padding-left: 13px;
+  padding-right: 15px;
+  margin-right: 0px;
+  margin-left: 10px;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  font-weight: bold;
+  /*border-left: solid 1px #282738;*/
 }
 
-#temperature.critical {
-  color: @base0F;
+
+#battery {
+  color: #9ece6a;
+}
+
+#battery.charging {
+  color: #9ece6a;
+}
+
+#battery.warning:not(.charging) {
+  background-color: #f7768e;
+  color: #24283b;
+  border-radius: 5px 5px 5px 5px;
+}
+
+#backlight {
+  background-color: #24283b;
+  color: #db4b4b;
+  border-radius: 0px 0px 0px 0px;
+  margin: 5px;
+  margin-left: 0px;
+  margin-right: 0px;
+  padding: 0px 0px;
+}
+
+#network {
+  color: #f4d9e1;
+  border-radius: 8px;
+  margin-right: 5px;
+}
+
+#pulseaudio {
+  color: #f4d9e1;
+  border-radius: 8px;
+  margin-left: 0px;
+}
+
+#pulseaudio.muted {
+  background: transparent;
+  color: #928374;
+  border-radius: 8px;
+  margin-left: 0px;
+}
+
+#custom-randwall {
+  color: #f4d9e1;
+  border-radius: 8px;
+  margin-right: 0px;
+}
+
+#custom-launcher {
+  color: #e5809e;
+  background-color: #282828;
+  border-radius: 0px 24px 0px 0px;
+  margin: 0px 0px 0px 0px;
+  padding: 0 20px 0 13px;
+  /*border-right: solid 1px #282738;*/
+  font-size: 20px;
+}
+
+#custom-launcher button:hover {
+  background-color: #FB4934;
+  color: transparent;
+  border-radius: 8px;
+  margin-right: -5px;
+  margin-left: 10px;
+}
+
+#custom-playerctl {
+background: #282828;
+padding-left: 15px;
+padding-right: 14px;
+border-radius: 16px;
+/*border-left: solid 1px #282738;*/
+/*border-right: solid 1px #282738;*/
+margin-top: 5px;
+margin-bottom: 5px;
+margin-left: 0px;
+font-weight: normal;
+font-style: normal;
+font-size: 16px;
+}
+
+#custom-playerlabel {
+  background: transparent;
+  padding-left: 10px;
+  padding-right: 15px;
+  border-radius: 16px;
+  /*border-left: solid 1px #282738;*/
+  /*border-right: solid 1px #282738;*/
+  margin-top: 5px;
+  margin-bottom: 5px;
+  font-weight: normal;
+  font-style: normal;
 }
 
 #window {
-  font-size: 0.9em;
-	font-weight: 400;
-	font-family: sans-serif;
+  background: #282828;
+  padding-left: 15px;
+  padding-right: 15px;
+  border-radius: 16px;
+  /*border-left: solid 1px #282738;*/
+  /*border-right: solid 1px #282738;*/
+  margin-top: 5px;
+  margin-bottom: 5px;
+  font-weight: normal;
+  font-style: normal;
+}
+
+#custom-wf-recorder {
+  padding: 0 20px;
+  color: #e5809e;
+  background-color: #1E1E2E;
+}
+
+#cpu {
+  background-color: #282828;
+  /*color: #FABD2D;*/
+  border-radius: 16px;
+  margin: 5px;
+  margin-left: 5px;
+  margin-right: 5px;
+  padding: 0px 10px 0px 10px;
+  font-weight: bold;
+}
+
+#memory {
+  background-color: #282828;
+  /*color: #83A598;*/
+  border-radius: 16px;
+  margin: 5px;
+  margin-left: 5px;
+  margin-right: 5px;
+  padding: 0px 10px 0px 10px;
+  font-weight: bold;
+}
+
+#disk {
+  background-color: #282828;
+  /*color: #8EC07C;*/
+  border-radius: 16px;
+  margin: 5px;
+  margin-left: 5px;
+  margin-right: 5px;
+  padding: 0px 10px 0px 10px;
+  font-weight: bold;
+}
+
+#custom-hyprpicker {
+  background-color: #282828;
+  /*color: #8EC07C;*/
+  border-radius: 16px;
+  margin: 5px;
+  margin-left: 5px;
+  margin-right: 5px;
+  padding: 0px 11px 0px 9px;
+  font-weight: bold;
 }
