--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -19,6 +19,7 @@ window#waybar {
 
 #custom-launcher {
     margin-left: 5px;
+    margin-right: 5px;
     padding-left: 7px;
     padding-right: 6px;
 }
