--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -39,7 +39,7 @@ window#waybar.hidden {
   background-color: transparent;
   box-shadow: inset 0 -3px transparent;
   border: none;
-  border-radius: 0;
+  border-radius: 7.8px;
 }
 
 #workspaces button.focused {
